welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: type mismatch;
 found   : Int
 required: Boolean
    if (a<=b<=c){rep=true}
              ^inOrderEqual:7: error: type mismatch;
 found   : Int
 required: Boolean
    if (a<b<c){rep=true}
            ^