welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
  var rep=false
  if (equalOk){
    if (a<=b<=c){rep=true}
  }
  else{
    if (a<b<c){rep=true}
  }
  return rep
}